--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -21,7 +21,6 @@ $main-col-right-inner-edge: $left-main-max-width - $main-col-horiz-padding;
 $left-col-max-width: $left-main-max-width - $main-col-max-width;
 $left-col-max-outer-width: $left-col-max-width + $main-col-horiz-padding;
 
-$main-col-right-inner-edge-pct: ($main-col-right-inner-edge / $left-main-max-width) * 100%;
 $main-col-width: ($main-col-max-width / $left-main-max-width) * 100%;
 $main-col-inner-width: ($main-col-max-inner-width / $left-main-max-width) * 100%;
 $left-col-width: ($left-col-max-width / $left-main-max-width) * 100%;
